tests/pass/ForEachStatement.java
public class ForStatement {
    public void forEachStatementAnalyze() {
        Integer[] a = {2, 3, 4, 5};
        for(Integer x : a) {
            a = a + 2;
        }
    }
}
